guides/v2.1/comp-mgr/trouble/cman/maint-mode.md
---
layout: default
group: compman
subgroup: ZZ_Troubleshooting
title: Maintenance mode options for upgrade
menu_title: Maintenance mode options for upgrade
menu_node: 
menu_order: 200
github_link: comp-mgr/trouble/cman/maint-mode.md
---

## Maintenance mode options for upgrade
This topic discusses how you can create a custom maintenance page to display to users while your Magento application is being upgraded. Creating a custom page is optional but recommended because your site is accessible during part of the upgrade.

Creating a custom page to which to redirect users prevents any access to the site and also informs your users that the site is undergoing maintenance.

<div class="bs-callout bs-callout-info" id="info">
  <p>You must perform the tasks in this section as a user with <code>root</code> privileges.</p>
</div>

See one of the following sections for more information:

*	[Custom maintenance page for Apache](#compman-trouble-maint-apache)
*	[Custom maintenance page for nginx](#compman-trouble-maint-nginx)


## Custom maintenance page for Apache {#compman-trouble-maint-apache}
This section discusses how to create a custom maintenance page and how to redirect traffic to it.

The example in this section shows how to modify the following files, which is one way to set up your maintenance page:

*	Apache 2.4: `/etc/apache2/sites-available/000-default.conf`
*	Apache 2.2: `/etc/apache2/sites-available/default` (Ubuntu), `/etc/httpd/conf/httpd.conf` (CentOS)

To create a maintenance page and redirect to it:

First, create a maintenance page named `maintenance.html` in your web server's docroot with the following contents:

{% highlight html %}
<!DOCTYPE html>
<html>
<head>
<title>Temporarily Offline</title>
<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
<style>
h1
{ font-size: 50px; }

body
{ text-align:center; font: 20px Helvetica, sans-serif; color: #333; }

</style>
</head>
<body>
<h1>Temporarily offline</h1>
<p>We're down for a short time to perform maintenance on our site to give you the best possible experience. Check back soon!</p>
</body>
</html>
{% endhighlight %}

Then use the following steps:

2.	Update your Apache configuration to do the following:

	*	Redirect all traffic to the maintenance page
	*	Whitelist certain IPs so an administrator can run the System Upgrade utility to upgrade the Magento software.

	The following example whitelists 192.0.2.110.

	Add the following at the end of your Apache configuration file:

		RewriteEngine On
		RewriteCond %{REMOTE_ADDR} !^192\.0\.2\.110
		RewriteCond %{DOCUMENT_ROOT}/maintenance.html -f
		RewriteCond %{DOCUMENT_ROOT}/maintenance.enable -f
		RewriteCond %{SCRIPT_FILENAME} !maintenance.html
		RewriteRule ^.*$ /maintenance.html [R=503,L]
		ErrorDocument 503 /maintenance.html
		Header Set Cache-Control "max-age=0, no-store"

3.	Restart Apache:

	*	CentOS: `service httpd restart`
	*	Ubuntu: `service apache2 restart`

4. Enter the following command:

		touch <web server docroot>/maintenance.enable
5.	[Upgrade your system]({{ site.gdeurl21 }}comp-mgr/upgrader/upgrade-start.html).
7.	Test your site to make sure it functions correctly.
6.	After the upgrade is done, delete `maintenance.enable`.

## Custom maintenance page for nginx {#compman-trouble-maint-nginx}
This section discusses how to create a custom maintenance page and how to redirect traffic to it.

The example in this section shows how to modify the following files, which is one way to set up your maintenance page:

To create a maintenance page and redirect to it, first create a maintenance page named `<your Magento install dir>/maintenance.html` with the following contents:

{% highlight html %}
<!DOCTYPE html>
<html>
<head>
<title>Temporarily Offline</title>
<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
<style>
h1
{ font-size: 50px; }

body
{ text-align:center; font: 20px Helvetica, sans-serif; color: #333; }

</style>
</head>
<body>
<h1>Temporarily offline</h1>
<p>We're down for a short time to perform maintenance on our site to give you the best possible experience. Check back soon!</p>
</body>
</html>
{% endhighlight %}

Then use the following steps:

1.	Make a backup copy of your nginx configuration file (for example, `/etc/nginx/conf.d/nginx.conf`):

		cp /etc/nginx/conf.d/nginx.conf /etc/nginx/conf.d/nginx.conf.bak

2.	Open your nginx configuration file in a text editor.

	The following whitelists IP address 192.0.2.110 and 192.0.2.115 on a system where Magento is installed in `/var/www/html/magento2` in the `server` block:

		set $MAGE_ROOT /var/www/html/magento2;
		set $maintenance on;

		if ($remote_addr ~ (192.0.2.110|192.0.2.115)) {
		  set $maintenance off;
		}

		if ($maintenance = on) {
		   return 503;
		}

		location /maintenance {
		}

		error_page 503 @maintenance;

		location @maintenance {
		  root $MAGE_ROOT;
		  rewrite ^(.*)$ /maintenance.html break;
		}
4.	Add the following line at the end of the nginx configuration:

		include /var/www/html/magento2/nginx.conf;

3. Reload the nginx configuration:

		service nginx reload
5.	[Upgrade your system]({{ site.gdeurl21 }}comp-mgr/upgrader/upgrade-start.html).
7.	Test your site to make sure it functions correctly.
6.	Remove the lines you added to your nginx configuration.
5.	Reload the nginx configuration:

		service nginx reload
